# Ashen-Engine

./: CMakeLists.txt  LICENSE_EXCEPTIONS.md  README.md  cmake_msvc2022.cmd
base/: default.cfg
base/glprogs/: depthMidpoint.vfp  screenSpaceShadow0.vfp  screenSpaceShadow1.vfp  screenSpaceShadow16.vfp  screenSpaceShadow4.vfp  shadowBufferInteraction0.vfp  shadowBufferInteraction1.vfp  shadowBufferInteraction16.vfp  shadowBufferInteraction4.vfp  shadowResample.vfp
neo/MayaImport/: maya_main.cpp
neo/TypeInfo/: CMakeLists.txt  TypeInfoGen.cpp  TypeInfoGen.h  main.cpp
neo/cm/: CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_rotate.cpp  CollisionModel_translate.cpp
neo/d3base/: CMakeLists.txt  D3Base_Defines.h  D3Base_Edit.cpp  D3Base_Edit.h  D3Base_Local.cpp  D3Base_Local.h  D3Base_Player.cpp  D3Base_Player.h
neo/d3base/gamesys/: TypeInfo_GenHelper.cpp  TypeInfo_GenHelper.h
neo/d3xp/: AF.cpp  AFEntity.cpp  Actor.cpp  BrittleFracture.cpp  CMakeLists.txt  Entity.cpp  Entity.h  Fx.cpp  Game.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  IK.cpp  Item.cpp  Item.h  Light.cpp  Misc.cpp  Moveable.cpp  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  Pvs.cpp  SecurityCamera.cpp  SmokeParticles.cpp  Sound.cpp  Target.cpp  Trigger.cpp  Weapon.cpp  Weapon.h  WorldSpawn.cpp
neo/d3xp/ai/: AAS_debug.cpp  AAS_pathing.cpp  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
neo/d3xp/anim/: Anim.cpp  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  TypeInfo.cpp  TypeInfo_GenHelper.h
neo/d3xp/physics/: Clip.cpp  Force_Field.cpp  Force_Grab.cpp  Physics.h  Physics_AF.cpp  Physics_Actor.cpp  Physics_Base.cpp  Physics_Monster.cpp  Physics_Parametric.cpp  Physics_Player.cpp  Physics_RigidBody.cpp  Physics_StaticMulti.cpp  Push.cpp
neo/d3xp/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Program.cpp  Script_Program.h  Script_Thread.cpp
neo/framework/: BuildDefines.h  CVarSystem.cpp  CmdSystem.cpp  Common.cpp  Common.h  Compressor.cpp  Console.cpp  DeclAF.cpp  DeclEntityDef.cpp  DeclManager.cpp  DeclManager.h  DeclParticle.cpp  DeclSkin.cpp  DeclTable.cpp  DemoFile.cpp  EditField.cpp  EventLoop.cpp  File.cpp  FileSystem.cpp  Game.h  KeyInput.cpp  KeyInput.h  Licensee.h  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  UsercmdGen.cpp
neo/framework/async/: AsyncClient.cpp  AsyncClient.h  AsyncNetwork.cpp  AsyncServer.cpp  MsgChannel.cpp  NetworkSystem.cpp  ServerScan.cpp  ServerScan.h
neo/game/: AF.cpp  AFEntity.cpp  Actor.cpp  AnimatedEntity.cpp  AnimatedEntity.h  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  Entity.h  Fx.cpp  Game_Defines.h  Game_Edit.cpp  Game_Edit.h  Game_local.cpp  Game_local.h  Game_network.cpp  IK.cpp  Inventory.cpp  Inventory.h  Item.cpp  Light.cpp  Misc.cpp  Moveable.cpp  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  PlayerView.cpp  Projectile.cpp  Projectile.h  Pvs.cpp  SecurityCamera.cpp  SmokeParticles.cpp  Sound.cpp  Target.cpp  (+4 more)
neo/idlib/: Base64.h  CMakeLists.txt  CmdArgs.cpp  Dict.cpp  Heap.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Str.cpp  precompiled.h
neo/idlib/bv/: Bounds.cpp  Box.cpp  Frustum.cpp  Sphere.cpp
neo/idlib/containers/: StaticList.h
neo/idlib/geometry/: JointTransform.cpp  Surface.cpp  Surface_Patch.cpp  Surface_Polytope.cpp  Surface_SweptSpline.cpp  TraceModel.cpp  TraceModel.h  Winding.cpp  Winding2D.cpp
neo/idlib/hashing/: MD5.cpp
neo/idlib/math/: Angles.cpp  Angles.h  Complex.h  Curve.h  Extrapolate.h  Interpolate.h  Lcp.cpp  Lcp.h  Math.cpp  Matrix.cpp  Matrix.h  Ode.cpp  Pluecker.h  Quat.h  Simd.cpp  Simd_3DNow.cpp  Simd_AltiVec.cpp  Simd_AltiVec.h  Simd_Generic.cpp  Simd_MMX.cpp  Simd_SSE.cpp  Simd_SSE2.cpp  Simd_SSE3.cpp  Vector.cpp  Vector.h
neo/libs/: CMakeLists.txt
neo/libs/openal/: stubs.cpp
neo/libs/stb/: stblib_impls.c
neo/renderer/: Cinematic.cpp  GuiModel.cpp  GuiModel.h  Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Material.cpp  Material.h  MegaTexture.cpp  MegaTexture.h  Model.cpp  ModelDecal.cpp  ModelManager.cpp  ModelOverlay.cpp  Model_ase.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_lwo.h  Model_ma.cpp  Model_md3.cpp  Model_md5.cpp  Model_prt.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld_demo.cpp  RenderWorld_portals.cpp  VertexCache.cpp  VertexCache.h  draw_arb2.cpp  draw_common.cpp  draw_exp.cpp  qgl.h  simplex.h  (+17 more)
neo/sound/: snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp
neo/sys/: sys_local.cpp  sys_public.h
neo/ui/: ChoiceWindow.cpp  ChoiceWindow.h  DeviceContext.cpp  EditWindow.cpp  EditWindow.h  FieldWindow.cpp  GameBearShootWindow.cpp  GameBustOutWindow.cpp  GameSSDWindow.cpp  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  MarkerWindow.cpp  RenderWindow.cpp  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  SliderWindow.h  UserInterface.cpp  Window.cpp  Window.h  Winvar.cpp  Winvar.h
(+233 files in other folders)
